--- a/public/views/createNewExercise.html
+++ b/public/views/createNewExercise.html
@@ -29,8 +29,10 @@
                </textarea>
                 <label for="imageUrl"></label>
                 <input placeholder="Enter ImageUrl" class="form-control" type="text" name="" value="" ng-model="imageUrl" />
+                <div>
                 <input type="button" class="btn btn-danger navbar-btn" ng-click="addExercise()" value="Submit" />
                 <input type="button" class="btn btn-primary navbar-btn" ng-click="home()" value="Home" />
+              </div>
             </form>
         </div>
     </div>
