--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: #404040;
-    color: black;
+    color: white;
 }
 
 div {
@@ -9,12 +9,12 @@ div {
 
 .jumbotron.jumbotron-fluid.text-center {
     /*background-color: #8B0000;*/
-    background-color: #a6a6a6;
+    background-color: #800000;
 }
 
 .tron-text {
     /*color: 	#404040 !important;*/
-    color: #0d0d0d !important;
+    color: #ffffff !important;
     font-size: 425% !important;
     font-family: "Comic Sans MS", cursive, sans-serif !important;
     font-weight: bold !important;
@@ -23,7 +23,7 @@ div {
 .modalRepeat {
     display: block;
     color: #AA3939;
-    /*background-color: #a6a6a6;*/
+    background-color: #a6a6a6;
 }
 
 
