--- a/public/views/viewExercise.html
+++ b/public/views/viewExercise.html
@@ -31,8 +31,8 @@
                 <div>
                     {{exercise.description}}
                 </div>
-                <input class="btn btn-default navbar-btn" type="button" name="button" ng-click="addToWorkout()" value="Add To Workout"/>
-                <input class="btn btn-default navbar-btn" type="button" name="button" ng-click="addToExercise()" value="Add To Exercise"/>
+                <!-- <input class="btn btn-default navbar-btn" type="button" name="button" ng-click="addToWorkout()" value="Add To Workout"/>
+                <input class="btn btn-default navbar-btn" type="button" name="button" ng-click="addToExercise()" value="Add To Exercise"/> -->
             </div>
 
             <input class="btn btn-danger" type="button" name="button" ng-click="home()" value="home"/>
