--- a/public/views/index.html
+++ b/public/views/index.html
@@ -30,8 +30,8 @@
                 <input class="form-control" ng-model="password" type="password" name="password" id="password" placeholder="password" />
             </div>
             <div>
-                <input class="btn btn-lg btn-primary btn-block" ng-click="login()" type="submit" value="Login" />
-                <a href="/register" class="text-danger">Don't have an account? Click here</a>
+                <input class="btn btn-lg btn-success btn-block" ng-click="login()" type="submit" value="Login" />
+                <a href="/register" class="register">Don't have an account? Click here</a>
             </div>
         </form>
     </div>
