--- a/public/views/getStarted.html
+++ b/public/views/getStarted.html
@@ -98,7 +98,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- exercise  modal end-->
 
             <!-- Search For Exercise Btn -->
@@ -107,7 +106,7 @@
 
             <!-- end  div container -->
             <label for="Log Out"></label>
-            <input class="btn btn-default btn-lg navbar-btn" type="button" name="logout" value="Logout" ng-model="logout" ng-click="logout()" />
+            <input class="btn btn-danger btn-lg navbar-btn" type="button" name="logout" value="Logout" ng-model="logout" ng-click="logout()" />
         </div>
     </div>
     </div>
