--- a/public/views/viewWorkout.html
+++ b/public/views/viewWorkout.html
@@ -34,7 +34,7 @@
             </div>
             <div ng-repeat='exercise in workout.exercise track by $index'>
                 <div>
-                    <img ng-src="{{exercise.imageUrl}}" height=2 00px width=2 00px/>
+                    <img ng-src="{{exercise.imageUrl}}" height=200px width=200px/>
                 </div>
                 <div>
                     Exercise Name: {{exercise.name}}
@@ -57,7 +57,7 @@
                         <div class="modal-body">
                             <div class="modalRepeat container-fluid" ng-repeat='exercise in exercises'>
                                 <div>
-                                    <img ng-src="{{exercise.imageUrl}}" height=2 00px width=2 00px/>
+                                    <img ng-src="{{exercise.imageUrl}}" height=200px width=200px/>
                                 </div>
                                 <div>
                                     {{exercise.name}}
