--- a/public/views/searchAPI.html
+++ b/public/views/searchAPI.html
@@ -21,15 +21,21 @@
         </div>
         <div class="container-fluid">
             <label for="Search Exercise"></label>
-            <input type="text" name="searchExercise" class="form-control" placeholder="Search Exercise" ng-model="searchExercise" />
-            <input class="btn btn-primary navbar-btn" type='button' name='search' value='Search' ng-click='searchExerciseFunc()' />
+            <input type="text" name="searchExercise" class="form-control" placeholder="Search Exercise" ng-model="searchExercise"/>
+            <input class="btn btn-primary navbar-btn" type='button' name='search' value='Search' ng-click='searchExerciseFunc()'/>
+            <!-- <div ng-repeat="exercise in exercises">
+                <div>Exercise Name: {{exercise.name}}</div>
+                <div>Exercise Description: {{exercise.description}}</div>
+                <input class="btn btn-primary navbar-btn" type="button" name="button" ng-click="addtoWorkout()" value="Select"/>
+            </div> -->
             <div ng-repeat="exercise in exercises|filter:searchExercise">
                 <div>Exercise Name: {{exercise.name}}</div>
                 <div>Exercise Description: {{exercise.description}}</div>
-                <input class="btn btn-primary navbar-btn" type="button" name="button" ng-click="addtoWorkout()" value="Select" />
+                <!-- <input class="btn btn-primary navbar-btn" type="button" name="button" ng-click="addtoWorkout()" value="Select"/> -->
             </div>
             <input class="btn btn-danger navbar-btn" type="button" name="button" value="Home" ng-click="home()" />
         </div>
+      </div>
 </body>
 
 </html>
